# runlab

./: AGENTS.md  CMakeLists.txt  README.md  plan.md  pyproject.toml  target.md  todo.md
bindings/: pybind_module.cpp
examples/: example.py
include/runlab/: dataflow.hpp  kernels.hpp  runtime.hpp
include/runlab/kernel/: kernels.hpp
include/runlab/runtime/: dataflow.hpp  sender.hpp
scripts/: build_and_test.sh
tests/: test_runtime.cpp
